[build-system]
requires = ["setuptools>=61", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "guidemaker"
description = "GuideMaker: Software to design gRNAs pools in non-model genomes and CRISPR-Cas"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "CC0 1.0 Universal (CC0 1.0) Public Domain Dedication" }
authors = [
  { name = "Adam Rivers", email = "adam.rivers@usda.gov" }
]
keywords = ["CRISPR-Cas"]
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.8",
  "Development Status :: 3 - Alpha"
]
dependencies = [
  "biopython>=1.81",
  "numpy>=1.11",
  "pybedtools>=0.9.1",
  "nmslib @ git+https://github.com/nmslib/nmslib/#subdirectory=python_bindings",
  "pandas>=2.1",
  "pyyaml>=6.0.1",
  "regex==2020.11.13",
  "altair>=5.1.1",
  "jsonschema>=4.19.0",
  "streamlit>=1.26.0",
  "streamlit-tags>=1.2.8",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pdoc3>=0.10.0",
  "onnxruntime>=1.15.1",
  "importlib-resources>=6.0"
]

[project.scripts]
guidemaker = "guidemaker.cli:main"

[tool.setuptools]
packages = ["guidemaker"]
include-package-data = true
zip-safe = false


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "guidemaker/_version.py"
versionfile_build = "guidemaker/_version.py"
tag_prefix = ""
parentdir_prefix = "GuideMaker-"

[tool.pytest.ini_options]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = [
  "--cov=guidemaker", "--cov-report=xml", "--ignore=setup.py", "--ignore=run_test.py",
  "--cov-report=term-missing", "--tb=native", "--strict-markers", "--durations=20"
]
markers = [
  "serial: execute test serially (to avoid race conditions)"
]

[tool.flake8]
max-line-length = 100
ignore = ["E122", "E123", "E126", "E127", "E128", "E731", "E722"]
exclude = ["build", "guidemaker/_version.py", "tests", ".git", "versioneer.py", "benchmarks", ".asv"]

